# fyp-firmware

./: .clang-format  .clangd  .extSettings  .gitattributes  .gitignore  .gitmodules  .mxproject  AGENTS.md  CLAUDE.md  CMakeLists.txt  Firmware.ioc  NOTICE  README.md  buf.yaml  build.ps1  build.py  flash.ps1  format.sh  gcc-arm-none-eabi.cmake  init.sh  mx-generated.cmake  od_yolo_x_person_atonbuf.xSPI2.raw  project.py  requirements.txt  sign-binary.ps1
.ai/: od_yolo_x_person_st_yolo_x_nano_480_1.0_0.25_3_int8.tflite_c_info.json
Appli/: .clang-format  CMakeLists.txt  CMakePresets.json  STM32N657XX_LRUN.ld  mx-generated.cmake
Appli/AZURE_RTOS/App/: app_azure_rtos.c
Appli/AZURE_RTOS/threads/: led_blink_thread.c  led_blink_thread.h
Appli/App/Inc/: app.h  app_bqueue.h  app_buffers.h  app_cam.h  app_cam_config.h  app_comm.h  app_comm_cmd.h  app_comm_log.h  app_comm_rx.h  app_comm_tx.h  app_config.h  app_cpuload.h  app_datalog.h  app_detection.h  app_error.h  app_event_bus.h  app_events.h  app_haptic.h  app_imu.h  app_lcd.h  app_lcd_config.h  app_nn.h  app_nn_config.h  app_overlay.h  app_postprocess.h  app_power.h  app_pp.h  app_tof.h  app_ui.h  model_config.h
Appli/App/Inc/comm/: comm_cmd.h  comm_log.h  comm_rx.h
Appli/App/Inc/config/: app_config.h  cam_config.h
Appli/App/Inc/display/: app_lcd.h  ui.h
Appli/App/Inc/models/: model_yolox_nano.h
Appli/App/Inc/util/: bqueue.h
Appli/App/Src/: app.c  app_bqueue.c  app_buffers.c  app_cam.c  app_comm.c  app_comm_cmd.c  app_comm_log.c  app_comm_rx.c  app_comm_tx.c  app_cpuload.c  app_datalog.c  app_detection.c  app_event_bus.c  app_haptic.c  app_imu.c  app_lcd.c  app_nn.c  app_overlay.c  app_postprocess.c  app_power.c  app_pp.c  app_tof.c  app_ui.c
Appli/App/Src/comm/: comm_rx.c
Appli/App/Src/display/: ui.c  ui_depth.c  ui_overlay.c  ui_panel.c
Appli/App/Src/util/: bqueue.c  cpuload.c
Appli/CMake/: ai_npu.cmake  ai_postprocessing.cmake  bsp.cmake  build_timestamp.cmake  nanopb.cmake  network.cmake  stm32_drivers.cmake  threadx.cmake  tracker.cmake  vl53l5cx.cmake
Appli/Camera/Inc/: cam.h  cam_internal.h
Appli/Camera/Src/: cam.c  cam_init.c  cam_pipe.c
Appli/Config/Inc/: app_config.h  cam_config.h  lcd_config.h  model_config.h  nn_config.h  power_mode.h  thread_config.h
Appli/Config/Inc/models/: model_st_yolodv2milli_256_coco_person.h  model_tinyissimo_v8_320_coco_person.h  model_yolo26_320_coco_person.h  model_yolo26_320_fyp_merged.h  model_yolox_nano_480_coco_person.h
Appli/Core/Inc/: app.h  app_ai.h  app_azure_rtos.h  app_buffers.h  app_cam.h  app_config.h  app_error.h  app_lcd.h  app_threadx.h  app_ui.h  aps256xx_conf.h  cmw_camera_conf.h  dcmipp.h  error_code.h  init_clock.h  init_mpu.h  init_peripherals.h  isp_param_conf.h  main.h  mx66uw1g45g_conf.h  partition_stm32n657xx.h  platform.h  ramcfg.h  secure_nsc.h  stm32n6570_discovery_conf.h  stm32n6xx_hal_conf.h  stm32n6xx_it.h  thread_cam.h  thread_led.h  tx_user.h  usart_io.h  utils.h  vl53l5cx_platform.h
Appli/Core/Src/: app.c  app_ai.c  app_azure_rtos.c  app_buffers.c  app_cam.c  app_error.c  app_lcd.c  app_threadx.c  app_ui.c  dcmipp.c  gpio.c  init_clock.c  init_mpu.c  init_peripherals.c  main.c  platform.c  power_measurement_sync.c  ramcfg.c  secure_nsc.c  stm32n6570_discovery_bus.c  stm32n6xx_hal_msp.c  stm32n6xx_hal_timebase_tim.c  stm32n6xx_it.c  syscalls.c  system_stm32n6xx_s.c  thread_cam.c  thread_led.c  usart.c  usart_io.c  vl53l5cx_platform.c
Appli/Display/Inc/: display.h  ui.h  ui_internal.h
Appli/Display/Src/: display.c  lcd.c  ui.c  ui_depth.c  ui_overlay.c  ui_panel.c
Appli/Measurement/Inc/: power_measurement_sync.h
Appli/Measurement/Src/: power_measurement_sync.c
Appli/NN/Inc/: nn.h  pp.h
Appli/NN/Src/: nn_thread.c  pp_thread.c
Appli/Proto/: messages.options  messages.pb.c  messages.pb.h  messages.proto  messages_limits.h  messages_pb2.py
Appli/Proto/nanopb/: messages.pb.c  messages.pb.h  messages_pb2.py  nanopb_pb2.py
Appli/RTOS/Inc/: app_azure_rtos_config.h  app_threadx.h
Appli/RTOS/Src/: app_azure_rtos.c  app_threadx.c
Appli/Sensor/Inc/: haptic.h  power_measurement_sync.h  tof.h  tof_fusion.h
Appli/Sensor/Src/: haptic.c  power_measurement_sync.c  tof.c  tof_fusion.c
Appli/Serial/Inc/: comm_cmd.h  comm_log.h  comm_tx.h
Appli/Serial/Src/: comm_cmd.c  comm_log.c  comm_rx.c  comm_tx.c
Appli/Startup/: STM32N657XX_LRUN.ld  STM32N657XX_LRUN.ld.template
Appli/Util/Inc/: bqueue.h  cpu_load.h  cpuload.h  error.h  rcu_buffer.h  timebase.h  tracex.h
Appli/Util/Src/: bqueue.c  cpu_load.c  error.c  timebase.c  tracex.c
Appli/X-CUBE-AI/App/: app_x-cube-ai.c  object_detection_yolo_x.h  od_yolo_x_person.h  od_yolo_x_person_generate_report.txt
Appli/cmake/: ai_npu.cmake  ai_postprocessing.cmake  bsp.cmake  cmw_camera.cmake  ism330dlc.cmake  isp_library.cmake  lcd.cmake  nanopb.cmake  network.cmake  stm32_drivers.cmake  threadx.cmake  vl53l5cx.cmake
FSBL/: CMakeLists.txt  mx-generated.cmake
FSBL/Core/Inc/: extmem_manager.h  main.h  stm32_extmem_conf.h  stm32n6570_discovery_conf.h  stm32n6xx_hal_conf.h  stm32n6xx_it.h
FSBL/Core/Src/: extmem_manager.c  gpio.c  main.c  stm32n6xx_hal_msp.c  stm32n6xx_it.c  syscall.c  sysmem.c  system_stm32n6xx_fsbl.c  xspi.c
FSBL/Startup/: STM32N657XX_AXISRAM2_fsbl.ld
Libraries/: README.md
Libraries/ai-postprocessing-wrapper/: app_postprocess_od_st_yolox_uf.c
Libraries/stm32-mw-camera/: cmw_utils.h
Libraries/tracker/: kf.c  kf.h  tracker.c  tracker.h
Networks/: .gitignore  generate.ps1  my_neural_art.json
Networks/Src/: od_yolo_x_person.c  od_yolo_x_person.h  od_yolo_x_person_ecblobs.h  st_yolo_d_256_person.c  st_yolo_d_256_person.h  st_yolo_d_256_person_ecblobs.h  st_yolo_x_480_person.c  st_yolo_x_480_person.h  tinyv8_320_person.c  (+21 more)
scripts/: build.py  clean.py  common.py  datalog_receiver.py  flash.py  format.py  generate_model.py  generate_proto.py  model.py  tracex_dump.py  tracex_parse.py  ui.py  visualizer.py  visualizer_gui.py  visualizer_ports.py  visualizer_proto.py  visualizer_recording.py  visualizer_runtime.py  visualizer_serial.py  visualizer_state.py
(+7 files in other folders)
